Removed unused LWJGL related foler 'libraries'.