@@ -24,9 +24,9 @@
  * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-package com.jcraft.jorbis;
+package jcraft.jorbis;
 
-import com.jcraft.jogg.*;
+import jcraft.jogg.*;
 
 public class Info{
   private static final int OV_EBADPACKET=-136;
@@ -462,8 +462,8 @@ public class Info{
   }
 
   public String toString(){
-    return "version:"+new Integer(version)+", channels:"+new Integer(channels)
-        +", rate:"+new Integer(rate)+", bitrate:"+new Integer(bitrate_upper)
-        +","+new Integer(bitrate_nominal)+","+new Integer(bitrate_lower);
+    return "version:"+Integer.valueOf(version)+", channels:"+Integer.valueOf(channels)
+        +", rate:"+Integer.valueOf(rate)+", bitrate:"+Integer.valueOf(bitrate_upper)
+        +","+Integer.valueOf(bitrate_nominal)+","+Integer.valueOf(bitrate_lower);
   }
 }
